# SFMLgame

./: BuildAndRun.sh
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test
include/: GameManager.h  Player.h
src/: GameManager.cpp  Player.cpp  main.cpp
